testing PanacheRepository and sqlite backup